--- a/tsp/pom.xml
+++ b/tsp/pom.xml
@@ -23,6 +23,11 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     </build>
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
